# balabit-os-9-xfonts-efont-unicode

./: 5x7.hex  5x8.hex  6x12.hex  7x14.hex  8x13.hex  Blocks.list  K12-1_uni.hex  K12-2_uni.hex  K14-1_uni.hex  K14-2_uni.hex  Makefile.diff  Makefile.in  configure  configure.in  dotum14_uni.hex  dotum16_uni.hex  etl14-unicode.hex  etl16-unicode.hex  etl24-unicode.hex  f14_add.hex  f16_add.hex  gb16fs_uni.hex  gb24st_uni.hex  gulim12_uni.hex  h12_add.hex  h14_add.hex  h16_add.hex  halfwidth.list  hanglm24_uni.hex  ind16_uni.hex  jiskan16-2000-1_uni.hex  jiskan16-2000-2_uni.hex  jiskan24_uni.hex  johab14.hex  johab24.hex  lao14-mule_uni.hex  lao16-mule_uni.hex  shinonome12_uni.hex  shinonome14_uni.hex  shinonome16_uni.hex  (+4 more)
debian/: README.Debian  changelog  control  copyright  fontlist  rules  watch  xfonts-efont-unicode-ib.docs  xfonts-efont-unicode-ib.install  xfonts-efont-unicode.docs  xfonts-efont-unicode.install
debian/patches/: 0001-fix-package-contains-timestamped-gzip-warning.patch  0002-deal-with-deprecated-feature-in-Perl5.30.patch  series
tools/: ChangeLog  any2ucs.in  bdf2bit.in  bdf2hex.in  hex2bdf.in  hexmerge.in  hexmix.in  johab-list.pl.in  mkbold.in  mkhalf.in  mkhangul.in  mkjohab.in  mklisthtml.in  ucs2any.in
